# common-ground-01

./: .gitignore  README.md  build.py  implementation_plan.md  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
actors/: bundesbank.md  bundestag.md  cdu.md  destatis.md  diw-berlin.md  fdp.md  gruene.md  ifo-institut.md  kfw.md  linke.md  spd.md
docs/: implementation_plan.md  outreach.md  progress.md  prototype_fund_application.md  prototype_fund_assessment.md  state_of_the_art_assessment.md
examples/: README.md
examples/edges/: topic.md
examples/edges/statements/: 02-mechanisms.md  03-policies.md
examples/full/data/: README.md
examples/minimal/statements/: main.md
format/: spec.md
src/actors/: README.md  bundesregierung.md  bundesverfassungsgericht.md  claude.md  sachverstandigenrat.md
src/common_ground/: __init__.py  model.py  parser.py  serialize.py  validator.py
src/format/: schema.json
src/topics/schuldenbremse/data/: README.md
src/topics/schuldenbremse/statements/: 01-fakten-rechtlich.md  02-fakten-empirisch.md  03-mechanismen.md  04-werte.md  05-politik.md
src/web/: README.md  index.html  main.js
tests/: test_examples.py  test_parser.py  test_schema_conformance.py  test_serialize.py  test_topics.py  test_validator.py
tests/fixtures/edges/statements/: 01-facts.md
tests/fixtures/full/: topic.md
tests/fixtures/full/data/: gdp.csv
tests/fixtures/full/statements/: 01-facts.md  02-policies.md
tests/fixtures/minimal/: topic.md
topics/schuldenbremse/: topic.md
topics/schuldenbremse/data/: bip-wachstum.csv  debt-to-gdp.csv  inflation-hvpi.csv
topics/schuldenbremse/statements/: 01-fakten-rechtlich.md  02-fakten-empirisch.md  03-mechanismen.md  04-werte.md  05-politik.md
web/: README.md  index.html  main.js
