[project]
name = "common-ground"
version = "0.1.0"
description = "Markdown-based toolchain for typed, layered argument graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marko>=2.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common_ground"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
# Test fixtures contain real-world markdown with proper typography (en-dash, em-dash).
# RUF001/RUF002/RUF003 flag ambiguous Unicode (homoglyph risk) which is a non-issue here.
"tests/*" = ["RUF001", "RUF002", "RUF003"]

[tool.ty.src]
include = ["src", "tests"]
